# refugio-warehouse-kit

./: .gitignore  EVAL_SEEDS.txt  README.md  WAREHOUSE_CHALLENGE.md  pyproject.toml
data/: movement_debug_scenarios.json  warehouse_layout.json
examples/: baseline_submission.py  greedy_baseline_submission.py
tests/: test_actions.py  test_baseline_agent.py  test_debug_scenarios.py  test_eval_runner.py  test_evaluation.py  test_layout.py  test_observation.py  test_replay.py  test_simulation.py  test_state.py  test_submission_loader.py  test_targets.py  test_warehouse_api.py
warehouse/: __init__.py  actions.py  baseline_agent.py  debug_scenarios.py  eval_runner.py  evaluation.py  layout.py  local_runner.py  observation.py  replay.py  simulation.py  state.py  submission_loader.py  targets.py  validate_layout.py
warehouse_api/: __init__.py
