[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "warehouse"
version = "0.1.0"
description = "Automated Warehouse Routing Challenge"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
include = ["warehouse", "warehouse_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".agents", ".claude"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N", "W"]
ignore = []
